# Sci-BOt

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: .env  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: optimization.py
backend/app/core/: data_processing.py  llm.py  logging_config.py
backend/app/core/active_learning/: __init__.py  acquisition.py  al_loop.py  dataset.py  features.py  models.py  optimizer.py  targets.py
backend/app/core/config_generator/: llm_client.py  parser.py  (+1 more)
backend/app/schemas/: feature_schemas.py  optimization.py  target_schemas.py
backend/app/utils/: serialization.py
backend/tests/: test_active_learning.py  test_config.py  test_config_gen.py  test_data_processing.py
dataset/: data_format_example.csv  json_example.json  test_problems.txt
frontend/: jest.setup.js  package.json
frontend/src/__tests__/: page.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ActiveLearning.tsx  CSVPreview.tsx  DataAnalysis.tsx  FileUpload.tsx
frontend/src/lib/: api.ts  mockData.ts  utils.ts
sci_llm/: .env  active_learning_cycle.py  agent.py  app.py
sci_llm/active_learning/: __init__.py  acquisition.py  al_loop.py  dataset.py  features.py  models.py  requirement_checkers.py
sci_llm/active_learning/utils/: constants.py  k_medoids.py
sci_llm/prompts/: base_prompt.txt  extra.txt  parsing_vars.txt
sci_llm/utils/: __init__.py  app_utils.py  data_utils.py  exceptions.py
tests/: test_active_learning_cycle.py
(+6 files in other folders)
